added martin to AUTORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,7 @@ lamestllama = Eric Parsonage <eric@eparsonage.com>
 marcuswolschon = Marcus Wolschon <Marcus@Wolschon.biz>
 markgriffin = Mark Griffin <mark.griffin@itu.int>
 mayrit = Murat Bronz <muratbronz@gmail.com>
+mdieblich = Martin Dieblich <martin.dieblich@gmx.de>
 milesj = Miles Johnson <johnson.miles@gmail.com>
 mmm = Martin Mueller <martin@pfump.org>
 nzjrs = John Stowers <john.stowers@gmail.com>
