--- a/doc/pprz_algebra/matrix.tex
+++ b/doc/pprz_algebra/matrix.tex
@@ -18,7 +18,8 @@ It is available for the following simple types:\\
 \begin{tabular}{c|c|c}
 type		& struct Mat	& struct RMat	\\ \hline
 int32\_t	& Int32Mat33	& Int32RMat		\\
-float		& FloatMat33	& FloatRMat
+float		& FloatMat33	& FloatRMat		\\
+double		& DoubleMat33	& DoubleRMat
 \end{tabular}
 
 
