--- a/doc/pprz_algebra/rates.tex
+++ b/doc/pprz_algebra/rates.tex
@@ -9,7 +9,8 @@ It is available for the following simple types:\\
 type		& struct		\\ \hline
 int16\_t	& Int16Rates	\\
 int32\_t	& Int32Rates	\\
-float 		& FloatRates
+float 		& FloatRates	\\
+double 		& DoubleRates
 \end{tabular}
 
 \subsection{= Assigning}
