--- a/doc/pprz_algebra/transformations/euler2matrix.tex
+++ b/doc/pprz_algebra/transformations/euler2matrix.tex
@@ -22,3 +22,4 @@ sin(\Pitch)cos(\Yaw) + sin(\Roll)cos(\Pitch)sin(\Yaw)	& sin(\Pitch)sin(\Yaw)-sin
 \end{pmatrix}\end{equation}
 \inHfile{INT32\_RMAT\_OF\_EULERS\_312(rm, e)}{pprz\_algebra\_int}
 \inHfile{FLOAT\_RMAT\_OF\_EULERS\_312(rm, e)}{pprz\_algebra\_float}
+\inHfile{DOUBLE\_RMAT\_OF\_EULERS\_312(rm, e)}{pprz\_algebra\_float}
