--- a/doc/pprz_algebra/transformations/euler2quaternion.tex
+++ b/doc/pprz_algebra/transformations/euler2quaternion.tex
@@ -12,3 +12,5 @@ In matrix notation:
 \end{pmatrix}
 \end{equation}
 \inHfile{INT32\_QUAT\_OF\_EULERS(q, e)}{pprz\_algebra\_int}
+\inHfile{FLOAT\_QUAT\_OF\_EULERS(q, e)}{pprz\_algebra\_float}
+\inHfile{DOUBLE\_QUAT\_OF\_EULERS(q, e)}{pprz\_algebra\_double}
