--- a/doc/pprz_algebra/transformations/matrix2euler.tex
+++ b/doc/pprz_algebra/transformations/matrix2euler.tex
@@ -17,3 +17,4 @@ and the extraction is done vice versa.
 \end{pmatrix}
 \end{equation}
 \inHfile{INT32\_EULERS\_OF\_RMAT(e, rm)}{pprz\_algebra\_int}
+\inHfile{FLOAT\_EULERS\_OF\_RMAT(e, rm)}{pprz\_algebra\_float}
