--- a/doc/pprz_algebra/transformations/matrix2quaternion.tex
+++ b/doc/pprz_algebra/transformations/matrix2quaternion.tex
@@ -44,3 +44,4 @@ q_z = \tfrac 1 2 \zeta
 \end{eqnarray}
 All are mathematicaly equivalent but numerically different. To avoid complex numbers and singularities the case with the biggest $\zeta$ should be choosen. 
 \inHfile{INT32\_QUAT\_OF\_RMAT(q, r)}{pprz\_algebra\_int}
+\inHfile{FLOAT\_QUAT\_OF\_RMAT(q, r)}{pprz\_algebra\_float}
