--- a/doc/pprz_algebra/transformations/quaternion2euler.tex
+++ b/doc/pprz_algebra/transformations/quaternion2euler.tex
@@ -24,3 +24,5 @@ The euler angles are then
 \end{pmatrix}
 \end{equation}
 \inHfile{INT32\_EULERS\_OF\_QUAT(e, q)}{pprz\_algebra\_int}
+\inHfile{FLOAT\_EULERS\_OF\_QUAT(e, q)}{pprz\_algebra\_float}
+\inHfile{DOUBLE\_EULERS\_OF\_QUAT(e, q)}{pprz\_algebra\_float}
