Added a lot of logs, changed the way or raw-logging and cleaned test_libeknav_4

--- a/doc/pprz_geodetic/ned_enu.tex
+++ b/doc/pprz_geodetic/ned_enu.tex
@@ -30,7 +30,7 @@ p_{ENU} \qquad p_{ENU} = \begin{pmatrix}
 or directly switching the values
 \begin{equation}
 \begin{pmatrix}x \\ y \\  z \end{pmatrix}_{NED} = 
-\begin{pmatrix}y \\ x \\ -z \end{pmatrix}_{NED}
+\begin{pmatrix}y \\ x \\ -z \end{pmatrix}_{ENU}
 \end{equation}
 \inHfile{ENU\_OF\_TO\_NED(po, pi)}{pprz\_geodetic}
 \inHfile{INT32\_VECT2\_ENU\_OF\_NED(o, i)}{pprz\_geodetic\_int}
