--- a/sw/airborne/fms/libeknav/doc/content.tex
+++ b/sw/airborne/fms/libeknav/doc/content.tex
@@ -41,6 +41,7 @@ This is logically the same rotation, but mathemaically a different quaternion. S
 \section{Initialisation}
 
 \subsection{What about the standard deviation?}
+Pay attention to the following equations! Many things are just guesses and no really mathematically proofen. So better think twice before just using my assumptions.
 \begin{figure}[h!]\begin{center}
 	\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=2cm,
                     semithick]
@@ -63,14 +64,16 @@ This is logically the same rotation, but mathemaically a different quaternion. S
 	\caption{Propagation of uncertainty}
 	\label{Propagation of uncertainty}
 \end{center}\end{figure}
+\subsubsection*{Measurement}
 First of all, every sensor (accelerometers $\vect a$ and magnetometers $\vect m$) has gaussian noise, that can be expressed as an additive error:
 \begin{equation}
 \vect a + \vect{\sigma_a} \quad \quad \vect m + \vect{\sigma_m}
 \end{equation}
 It can be asssumed that the error follows a standard deviation (has zero mean and is time-invariant).
+\subsubsection*{attitude profile matrix}
 The attitude profile matrix $ \mat B $ is the sum of the measurements with specific weights.
 \begin{equation}\label{attitude profile matrix}
-\mat B = \sum_{k=1}^n w_k \cdot \vect{W}_k \cdot \transp{\vect{V}_k} = w_a \sum_{k=1}^{n_a} \frac{\vect a_k}{\norm{a_k}} \cdot \transp{\vect{g}}  +  w_m \sum_{k=1}^{n_m} \frac{\vect m_k}{\norm{m_k}} \cdot \transp{\vect{h}}
+\mat B = \sum_{k=1}^n w_k \cdot \vect{W}_k \cdot \transp{\vect{V}_k} = w_a \sum_{k=1}^{n_a} \vect a_k \cdot \transp{\vect{g}}  +  w_m \sum_{k=1}^{n_m} \vect m_k \cdot \transp{\vect{h}}
 \end{equation}
 $n$ is the number of measurements, $w_k$ is the specific weight of a measurement, $\vect{W}_k$ the measured vector and $\vect{V}_k$ the reference direction, which belongs to the measured direction. Therefore $n_a$ is the number of acceleration measurements, $w_a$ is the (constant) weight of the acceleration measurements, $\vect{a}_k$ is a single acceleration observation and $\vect{g}$ is the gravity. $\vect{a}_k$ becomes normed. Similar for the magnetometer weight $w_m$, measurement $\vect {m}_k$, the magnetic field $\vect h$ and the amount of magnetometer measurements $n_m$. See the next section how the weight should be choosen.
 
@@ -78,7 +81,7 @@ The resulting error is
 \begin{equation}
 \mat{\sigma_B} = \frac{n_a}{f_a} \frac{1}{\norm g_2} \vect{\sigma_a}\transp{\vect{g}} + \frac{n_m}{f_m} \frac{1}{\norm h_2} \vect{\sigma_m}\transp{\vect{m}}
 \end{equation}
-
+\subsubsection*{``K''-matrix}
 The error for the ``K''-matrix is easy to get by inserting $ \mat B + \mat {\sigma_B} $ into
 \begin{equation}
 \mat K = \begin{bmatrix}
@@ -86,10 +89,68 @@ trace(\mat B) & \transp{\vect Z} \\
 \vect Z & \mat B + \transp{\mat B} - trace(\mat B) \mat I
 \end{bmatrix}
 \end{equation}
+\begin{equation}
+\mat{\sigma_K} = \begin{bmatrix}
+trace(\mat{\sigma_B}) & \transp{\vect \sigma_Z} \\
+\vect \sigma_Z & \mat{\sigma_B} + \transp{\mat{\sigma_B}} - trace(\mat{\sigma_B}) \mat I
+\end{bmatrix}
+\end{equation}
 
+\subsubsection*{Eigenvector}
+The dominant eigenvector is computed with the power iteration:
+\begin{equation}
+\vect x_{k+1} = \frac{\mat K \vect x_k}{\norm{\mat K \vect x_k}_{max}}
+\end{equation}
+With $ \mat K \rightarrow \mat K + \mat {\sigma_K} $:
+\begin{equation}
+\vect x_{k+1} + \vect\sigma_{x_{k+1}} = \frac{(\mat K + \mat {\sigma_K}) \vect x_k}{\norm{(\mat K + \mat {\sigma_K}) \vect x_k}_{max}} = \frac{\mat K \vect x_k}{\norm{(\mat K + \mat {\sigma_K}) \vect x_k}_{max}} + \frac{\mat {\sigma_K} \vect x_k}{\norm{(\mat K + \mat {\sigma_K}) \vect x_k}_{max}}
+\end{equation}
+If we assume that
+\begin{equation}
+\norm{(\mat K + \mat {\sigma_K}) \vect x_k}_{max} \approx \norm{\mat K \vect x_k}_{max}
+\end{equation}
+we'll get:
+\begin{equation}
+\vect\sigma_{x_{k+1}} = \frac{\mat {\sigma_K} \vect x_k}{\norm{\mat K\vect x_k}_{max}}
+\end{equation}
+This means that our final error at the end of the iteration can be computed using the vector from the step before:
+\begin{equation}
+\vect\sigma_{x_n} = \frac{\mat {\sigma_K} \vect x_{n-1}}{\norm{\mat K\vect x_{n-1}}_{max}}
+\end{equation}
+We should keep in mind, that we get an additional error because the the power iteration does not stop, when it's close to the eigenvector. It stops if two iteration steps $\vect x_k $ and $\vect x_{k+1} $ are close to each other. To avoid getting an additional problem with that we should choose the canceling condition of the iteration $\delta = \norm{\vect x_k-\vect x_{k+1}}_{max} $ much smaller than $\norm{\mat{\sigma_K}}_{max} $.
 
+And, of course:
+\begin{equation}
+\vect \sigma_x = \quat{\sigma}
+\end{equation}
 
-
+\subsubsection*{Euler angles}
+Our current expression is something like $ \quat{true} = \quat{false} + \sigma_{\quat{}} $. But it would be helpful to express the difference as a multiplication:
+\begin{align}
+\quat{false} + \sigma_{\quat{}} 				&= \quat{false2true} \quatprod \quat{false} \\
+(\quat{} + \sigma_{\quat{}}) \quatprod \quat{false}^{-1} &= \quat{false2true} \quatprod \quat{false} \quatprod \quat{false}^{-1}	\\
+\quat{false2true} &= (\quat{false} + \sigma_{\quat{}}) \quatprod \quat{false}^{-1}	\\
+\quat{false2true} &= \mathbf{I} + \sigma_{\quat{}} \quatprod \quat{false}^{-1}  	\\
+\quat{false2true} &= \mathbf{I} + \sigma_{\quat{}} \quatprod \comp{\quat{false}} \label{equ. false2true}
+\end{align}
+Composition of small Euler angles\footnote{\emph{only} small Euler angles!} is done by simply adding them. We can assume that the error of the quaternion is small, so addition should be valid.
+\begin{equation}
+\quat{false2true} \quatprod \quat{false} \rightarrow \begin{pmatrix}\phi \\ \theta \\ \psi \end{pmatrix} + \begin{pmatrix}\sigma_{\phi} \\ \sigma_{\theta} \\ \sigma_{\psi} \end{pmatrix}	\\
+\quat{false2true} \rightarrow \begin{pmatrix}\sigma_{\phi} \\ \sigma_{\theta} \\ \sigma_{\psi} \end{pmatrix}
+\end{equation}
+For small rotations, the imaginary part $\vect v$ of the quaternion becomes Euler angles.
+\begin{equation}
+\vect v_{false} = \begin{pmatrix}\sigma_{\phi} \\ \sigma_{\theta} \\ \sigma_{\psi} \end{pmatrix}	\label{equ. err euler}
+\end{equation}
+As a result, we don't care about the Identity rotation from equation (\ref{equ. false2true}). Furthermore, with
+\begin{equation}
+\quat{false} = \begin{pmatrix} \quat 0 \\ \vect v_q \end{pmatrix} \quad and \quad
+\sigma_q = \begin{pmatrix} \sigma_{q0} \\ \vect v_{\sigma} \end{pmatrix}
+\end{equation}
+we can rewrite equation (\ref{equ. err euler}) to
+\begin{equation}
+\begin{pmatrix}\sigma_{\phi} \\ \sigma_{\theta} \\ \sigma_{\psi} \end{pmatrix} = \quat 0 \vect v_{\sigma} - \sigma_{q0} \vect v_q + \vect v_q \cross \vect v_{\sigma}.
+\end{equation}
 
 
 
@@ -98,51 +159,51 @@ trace(\mat B) & \transp{\vect Z} \\
 
 
 \subsection{choosing the best weight for the attitude profile matrix}
-If you replace the single measurements in equation (\ref{attitude profile matrix}) with the real (and normed) measurements
+If you replace the single measurements in equation (\ref{attitude profile matrix}) with the real measurements
 \begin{equation}
-\frac{\vect a_k + \vect{\sigma_a}}{\norm{a_k}}_2 \quad \quad \frac{\vect m_k + \vect{\sigma_m}}{\norm{m_k}}_2
+\vect a_k + \vect{\sigma_a} \quad \quad \vect m_k + \vect{\sigma_m}
 \end{equation}
 and assume that $\mat B$ has an error $\mat B +\mat{\sigma_B} $, you will get
 \begin{equation}
-\mat B +\mat{\sigma_B} = w_a \sum_{k=1}^{n_a} \frac{\vect a_k + \vect{\sigma_a}}{\norm{a_k}_2} \cdot \transp{\vect{g}}  +  w_m \sum_{k=1}^{n_m} \frac{\vect m_k + \vect{\sigma_m}}{\norm{m_k}_2} \cdot \transp{\vect{h}}
+\mat B +\mat{\sigma_B} = w_a \sum_{k=1}^{n_a} (\vect a_k + \vect{\sigma_a}) \cdot \transp{\vect{g}}  +  w_m \sum_{k=1}^{n_m} (\vect m_k + \vect{\sigma_m}) \cdot \transp{\vect{h}}
 \end{equation}
 \begin{equation}
-\mat B +\mat{\sigma_B} = w_a \sum_{k=1}^{n_a} \frac{\vect a_k}{\norm{a_k}}_2 \cdot \transp{\vect{g}} + \frac{\vect{\sigma_a}}{\norm{a_k}}_2 \cdot \transp{\vect{g}} + w_m \sum_{k=1}^{n_m} \frac{\vect m_k}{\norm{m_k}}_2 \cdot \transp{\vect{h}} + \frac{\vect{\sigma_m}}{\norm{m_k}}_2 \cdot \transp{\vect{h}}
+\mat B +\mat{\sigma_B} = w_a \sum_{k=1}^{n_a} \vect a_k \cdot \transp{\vect{g}} + \vect{\sigma_a} \cdot \transp{\vect{g}} + w_m \sum_{k=1}^{n_m} \vect m_k \cdot \transp{\vect{h}} + \vect{\sigma_m} \cdot \transp{\vect{h}}
 \end{equation}
 \begin{equation}
-\mat B +\mat{\sigma_B} = \underbrace{w_a \sum_{k=1}^{n_a} \frac{\vect a_k}{\norm{a_k}}_2\cdot \transp{\vect{g}} + w_m \sum_{k=1}^{n_m} \frac{\vect m_k}{\norm{m_k}}_2 \cdot \transp{\vect{h}}}_{\mat B} + w_a \sum_{k=1}^{n_a} \frac{\vect{\sigma_a}}{\norm{a_k}}_2 \cdot \transp{\vect{g}} + w_m \sum_{k=1}^{n_m} \frac{\vect{\sigma_m}}{\norm{m_k}}_2 \cdot \transp{\vect{h}}
+\mat B +\mat{\sigma_B} = \underbrace{w_a \sum_{k=1}^{n_a} \vect a_k \cdot \transp{\vect{g}} + w_m \sum_{k=1}^{n_m} \vect m_k \cdot \transp{\vect{h}}}_{\mat B} + w_a \sum_{k=1}^{n_a} \vect{\sigma_a} \cdot \transp{\vect{g}} + w_m \sum_{k=1}^{n_m} \vect{\sigma_m} \cdot \transp{\vect{h}}
 \end{equation}
 \begin{equation}
-\mat{\sigma_B} = w_a \sum_{k=1}^{n_a} \frac{\vect{\sigma_a}}{\norm{a_k}}_2 \cdot \transp{\vect{g}} + w_m \sum_{k=1}^{n_m} \frac{\vect{\sigma_m}}{\norm{m_k}}_2 \cdot \transp{\vect{h}}
+\mat{\sigma_B} = w_a \sum_{k=1}^{n_a} \vect{\sigma_a} \cdot \transp{\vect{g}} + w_m \sum_{k=1}^{n_m} \vect{\sigma_m} \cdot \transp{\vect{h}}
 \end{equation}
-$\norm{a_k}_2$ and $\norm{m_k}_2$ shouldn't vary that much and can be assumed as constant ($\norm{a}_2$ and $\norm{m}_2$). The equation reduces to:
+The sums are independent from their indices:
 \begin{equation}
-\mat{\sigma_B} = w_a n_a \frac{\vect{\sigma_a}}{\norm{a}_2}\cdot \transp{\vect{g}} + w_m n_m \frac{\vect{\sigma_m}}{\norm{m}_2} \cdot \transp{\vect{h}}
+\mat{\sigma_B} = w_a n_a \vect{\sigma_a} \cdot \transp{\vect{g}} + w_m n_m \vect{\sigma_m} \cdot \transp{\vect{h}}
 \end{equation}
 
 It would be nice, if it's possible to reduce this to a single value. To do that, we need a matrix norm. In this case, I choosed the Frobenius Norm:
 \begin{align}
-\norm{\mat{\sigma_B}}_{F} &= \norm{w_a n_a \frac{\vect{\sigma_a}}{\norm{a}_2}\cdot \transp{\vect{g}} + w_m n_m \frac{\vect{\sigma_m}}{\norm{m}_2} \cdot \transp{\vect{h}}}_{F}		\\
-&\le \norm{w_a n_a \frac{\vect{\sigma_a}}{\norm{a}_2}\cdot \transp{\vect{g}}}_{F} + \norm{w_m n_m \frac{\vect{\sigma_m}}{\norm{m}_2} \cdot \transp{\vect{h}}}_{F}		\\
-&= w_a n_a \frac{1}{\norm{a}_2}\cdot \norm{\vect{\sigma_a} \transp{\vect{g}}}_{F} + w_m n_m \frac{1}{\norm{m}_2} \cdot \norm{\vect{\sigma_m} \transp{\vect{h}}}_{F}
+\norm{\mat{\sigma_B}}_{F} &= \norm{w_a n_a \vect{\sigma_a} \cdot \transp{\vect{g}} + w_m n_m \vect{\sigma_m} \cdot \transp{\vect{h}}}_{F}		\\
+&\le \norm{w_a n_a \vect{\sigma_a} \cdot \transp{\vect{g}}}_{F} + \norm{w_m n_m \vect{\sigma_m} \cdot \transp{\vect{h}}}_{F}		\\
+&= w_a n_a \norm{\vect{\sigma_a} \transp{\vect{g}}}_{F} + w_m n_m \norm{\vect{\sigma_m} \transp{\vect{h}}}_{F}
 \end{align}
 
 It is straight-forward to proove that $ \norm{\vect a \transp{\vect b}}_F = \norm a_2 \cdot \norm b_2 $
 \begin{equation}
-\norm{\mat{\sigma_B}}_{F} \le w_a n_a \frac{\norm g_2}{\norm a_2}\cdot \norm{\sigma_a}_2 + w_m n_m \frac{\norm h_2}{\norm m_2} \cdot \norm{\sigma_m}_2
+\norm{\mat{\sigma_B}}_{F} \le w_a n_a \norm g_2 \cdot \norm{\sigma_a}_2 + w_m n_m \norm h_2 \cdot \norm{\sigma_m}_2
 \end{equation}
 
 As you can see, the uncertainty depends on the following parameters:
 \begin{itemize}
 \item The weight of a measurement $w_a$ and $w_m$.
 \item The number of measurements $n_a$ and $n_m$.
-\item Something that I call a "measurement gain", $\frac{\norm{a}_2}{\norm{g}_2}$ and $\frac{\norm{m}_2}{\norm{h}_2}$, since it's the ratio between the true value and the measured value.
+\item The length/norm of the reference directions $\vect g$ and $\vect h$.
 \item The maximum of the error $\sigma_a$ and $\sigma_m$.
 \end{itemize}
 
-This is not what I want. I don't want the error grow with the number of measurements or with the gain, that is related to the measruement device. If I choose
+This is not what I want. I don't want the error grow with the number of measurements or with the length of the reference direction, which is related to the kind of the measurement. If I choose
 \begin{equation}
-w_a = \frac{\norm a_2}{n_a \cdot \norm g_2} \quad and \quad w_m = \frac{\norm m_2}{n_m \cdot \norm h_2}
+w_a = \frac{1}{n_a \cdot \norm g_2} \quad and \quad w_m = \frac{1}{n_m \cdot \norm h_2}
 \end{equation}
 I get something like
 \begin{equation}
@@ -155,7 +216,7 @@ which looks much better. For the Frobenius norm of the attitude profile matrix t
 That is an acceptable fact, since it helps to keep the matrix bound.
 But because I want to do live-update of the attitude profile matrix I don't know the real amount of measurements $n_a$ and $n_m$. But I know the measurement frequencies $f_a$ and $f_m$, which are directly linked to them ($f = \tfrac n T $). So my final decision for the measurement weight is
 \begin{equation}
-w_a = \frac{\norm a_2}{f_a \cdot \norm g_2} \quad and \quad w_m = \frac{\norm m_2}{f_m \cdot \norm h_2} \quad .
+w_a = \frac{1}{f_a \cdot \norm g_2} \quad and \quad w_m = \frac{1}{f_m \cdot \norm h_2} \quad .
 \end{equation}
 The resulting error is then
 \begin{equation}
