--- a/README
+++ b/README
@@ -1,33 +1,33 @@
 #   Paparazzi $Id$
-#   Copyright (C) 2003-2006 Pascal Brisset Antoine Drouin
+#   Copyright (C) 2003-2010 The Paparazzi Team
 #
-# This file is part of paparazzi.
+# This file is part of Paparazzi.
 #
-# paparazzi is free software; you can redistribute it and/or modify
+# Paparazzi is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2, or (at your option)
 # any later version.
 #
-# paparazzi is distributed in the hope that it will be useful,
+# Paparazzi is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with paparazzi; see the file COPYING.  If not, write to
+# along with Paparazzi; see the file COPYING.  If not, write to
 # the Free Software Foundation, 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.  
+
 
 Intro
 -----
 
-Paparazzi is an attempt to develop a cheap fixed wing UAV (Unmanned Air
-Vehicle).  As of today we have successfully flown autonomously several small
-electro powered fixed wing aircraft (Twinstar, Microjet, ...).
+Paparazzi is an attempt to develop a free software Unmanned (Air) Vehicle System.
+ As of today the system is being used successfuly by a number of hobyists, universities and companies all over the world, on vehicle of various size ( 100g to 25Kg ) and of various nature ( fixed wing, rotorcrafts, boats and surface vehicles).
 
 Up to date informations are available from the wiki website
 
-	paparazzi.enac.fr
+	http://paparazzi.enac.fr
 
 and from the mailing list (http://savannah.nongnu.org/mail/?group=paparazzi)
 and the IRC channel (freenode, #paparazzi).
@@ -62,15 +62,18 @@ For Debian or Ubuntu users, required packages are available at
 
 	http://paparazzi.enac.fr/debian
 
-Installation of the meta-package "paparazzi-dev" will install
-everything needed to compile this project (if something is missing,
-please ask) for simulation. "paparazzi-arm7" is required to compile
-the code for the ARM based boards.
+
+  - "paparazzi-dev" will provide everything needed to compile and run the ground segment and the simulator. If something is missing, please report it. 
+  - "paparazzi-arm7" is required to compile the code for LPC21 based boards ( tiny, twog, booz, etc). 
+  - "paparazzi-stm32" is needed for building code for STM32 based boards (lisa/L, lisa/M)
+  - "paparazzi-omap" is needed for building code for the optional Gumstix Overo module available on lisa/L
+
+  - "paparazzi-jsbsim" is needed for using jsbsim as flight dynamic model for the simulator.
 
 Compilation and demo simulation
 -------------------------------
 
-  1) "make" in the top directory to compile all the libraries and tools.
+  1) type "make" in the top directory to compile all the libraries and tools.
 
   2) "./paparazzi" to run the Paparazzi Center
 
