--- a/README
+++ b/README
@@ -16,7 +16,7 @@
 # You should have received a copy of the GNU General Public License
 # along with Paparazzi; see the file COPYING.  If not, write to
 # the Free Software Foundation, 59 Temple Place - Suite 330,
-# Boston, MA 02111-1307, USA.  
+# Boston, MA 02111-1307, USA.
 
 
 Intro
@@ -27,7 +27,7 @@ Paparazzi is an attempt to develop a free software Unmanned (Air) Vehicle System
 
 Up to date informations are available from the wiki website
 
-	http://paparazzi.enac.fr
+    http://paparazzi.enac.fr
 
 and from the mailing list (http://savannah.nongnu.org/mail/?group=paparazzi)
 and the IRC channel (freenode, #paparazzi).
@@ -60,11 +60,11 @@ Main requirements include
 
 For Debian or Ubuntu users, required packages are available at
 
-	http://paparazzi.enac.fr/debian
+    http://paparazzi.enac.fr/debian
 
 
-  - "paparazzi-dev" will provide everything needed to compile and run the ground segment and the simulator. If something is missing, please report it. 
-  - "paparazzi-arm7" is required to compile the code for LPC21 based boards ( tiny, twog, booz, etc). 
+  - "paparazzi-dev" will provide everything needed to compile and run the ground segment and the simulator. If something is missing, please report it.
+  - "paparazzi-arm7" is required to compile the code for LPC21 based boards ( tiny, twog, booz, etc).
   - "paparazzi-stm32" is needed for building code for STM32 based boards (lisa/L, lisa/M)
   - "paparazzi-omap" is needed for building code for the optional Gumstix Overo module available on lisa/L
 
@@ -77,7 +77,7 @@ Compilation and demo simulation
 
   2) "./paparazzi" to run the Paparazzi Center
 
-  3) Select the "MJ5" or the "TJ1" aircraft in the upper-left A/C
+  3) Select the "Microjet" aircraft in the upper-left A/C
 combo box. Select "sim" from upper-middle "target" combo box. Click
 "Build". When the compilation is finished, select "Simulation" from
 the upper-right session combo box and click "Execute".
