--- a/sw/lib/ocaml/ivy/debian/changelog.3.11.2
+++ b/sw/lib/ocaml/ivy/debian/changelog.3.11.2
@@ -1,3 +1,9 @@
+ivy-ocaml (1.1-11) unstable; urgency=low
+
+  * Support of ivy-c_3.11.6, OSX and Linux 64bit
+
+ -- Gautier Hattenberger <gautier.hattenberger@enac.fr>  Wed, 1 Dec 2010 10:43:29 +0100
+
 ivy-ocaml (1.1-10) unstable; urgency=low
 
   * Updated for ocaml 3.11.2
